[gd_scene load_steps=6 format=2]

[ext_resource path="res://sword.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/sword_spin.tres" type="Animation" id=2]
[ext_resource path="res://assets/Wooden_UI_png/sword_02.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource_name = "spawn"
length = 1.0
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -90.0, 0.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0
height = 64.8528

[node name="Node" type="Node"]

script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/spawn = SubResource( 1 )
anims/spin = ExtResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Area2D" type="Area2D" parent="." index="1"]

scale = Vector2( 1e-005, 1e-005 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

rotation = 0.785398
shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="Area2D" index="1"]

scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


